fix: word break on image card

--- a/src/components/Cards/ImageCard/ImageCard.module.scss
+++ b/src/components/Cards/ImageCard/ImageCard.module.scss
@@ -75,5 +75,9 @@ $placeholder-background: #000;
 
 	.Footer {
 		padding: 16px;
+
+		.Subheader {
+			word-break: break-all;
+		}
 	}
 }
